Fixed submit button to better align with theme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,11 +27,6 @@ p {
     overflow: auto;
 }
 
-#submitButton {
-    color: #ffffff;
-    background-color: #4aaaa5;
-}
-
 #portfolioImages img {
     position: relative;
     width: 100%;
@@ -53,7 +48,6 @@ p {
     color: white;
 }
 
-/* lg */
 @media (min-width: 1140px) {
     h1 {
         font-size: 3em;
@@ -64,18 +58,20 @@ p {
     }
 }
 
-/* md */
 @media (max-width: 1024px) {
     h1 {
         font-size: 2.5em;
     }
 
     .col-md-10 {
-        max-width: 53.333333%;
+        max-width: 66.666666%;
+    }
+
+    .img-fluid {
+        max-width: 50%;
     }
 }
 
-/* sm */
 @media (max-width: 950px) {
     h1 {
         font-size: 2em;
@@ -84,16 +80,15 @@ p {
     .col-md-10 {
         max-width: 100%;
     }
+
+    .img-fluid {
+        max-width: 100%;
+    }
 }
 
-/* xs < 768 */
 @media (max-width:767px) {
     h1 {
         font-size: 2em;
-    }
-
-    .col-md-10 {
-        max-width: 100%;
     }
 
     .offset-1 {
